--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>pe.edu.vallegrande</groupId>
-    <artifactId>speech</artifactId>
+    <artifactId>HistoryServiceImpl</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>speech</name>
     <description>speech</description>
